; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_unlink.c_nfs_wait_on_sillyrename.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_unlink.c_nfs_wait_on_sillyrename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.nfs_inode = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_wait_on_sillyrename(%struct.dentry* %0) #0 {
  %2 = alloca %struct.dentry*, align 8
  %3 = alloca %struct.nfs_inode*, align 8
  store %struct.dentry* %0, %struct.dentry** %2, align 8
  %4 = load %struct.dentry*, %struct.dentry** %2, align 8
  %5 = getelementptr inbounds %struct.dentry, %struct.dentry* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.nfs_inode* @NFS_I(i32 %6)
  store %struct.nfs_inode* %7, %struct.nfs_inode** %3, align 8
  %8 = load %struct.nfs_inode*, %struct.nfs_inode** %3, align 8
  %9 = getelementptr inbounds %struct.nfs_inode, %struct.nfs_inode* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.nfs_inode*, %struct.nfs_inode** %3, align 8
  %12 = getelementptr inbounds %struct.nfs_inode, %struct.nfs_inode* %11, i32 0, i32 0
  %13 = call i32 @atomic_read(i32* %12)
  %14 = icmp sle i32 %13, 1
  %15 = zext i1 %14 to i32
  %16 = call i32 @wait_event(i32 %10, i32 %15)
  ret void
}

declare dso_local %struct.nfs_inode* @NFS_I(i32) #1

declare dso_local i32 @wait_event(i32, i32) #1

declare dso_local i32 @atomic_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
